<resources>
    <string name="app_name">Laudio Sarean</string>
    <string name="app_nameLarriz">LAUDIO SAREAN</string>

    <!-- MainActivity -->
    <string name="eposta">E-posta</string>
    <string name="pasahitza">Pasahitza</string>
    <string name="saioahasi">Saioa hasi</string>
    <string name="erregistratuEmen">Erregistratu emen</string>
    <string name="kontuaEz">Ez duzu kontua?</string>
    <string name="sartuEposta">Sartu zure E-posta</string>
    <string name="sartuPasahitza">Sartu zure pasahitza</string>
    <string name="pasahitzaGorde">Pasahitza gorde</string>

    <string name="erKonexioaLogin">Ez dago Internet konexiorik. Saiatu berriro geroago</string>
    <string name="erEpostaLogin">Eposta ez da aurkitu</string>
    <string name="erPasahitzaLogin">Pasahitz okerra</string>
    <string name="erLoginLogin">E-posta edo pasahitz okerra</string>
    <string name="ongiEtorri">Ongi etorri</string>

    <string name="ubiError">Baimena ukatua. Aplikazioak ezin izango du kokalekua eskuratu.</string>

    <!-- MainActivity.xml -->
    <string name="pasahitzaBegia">Pasahitza erakutsi/ezkutatu</string>

    <!-- Erregistroa -->
    <string name="izena">Sartu zure izena</string>
    <string name="abizenak">Sartu zure abizenak</string>
    <string name="pasahitza1">Sartu zure pasahitza</string>
    <string name="pasahitza2">Errepikatu pasahitza</string>
    <string name="erregistratu">Erregistroa bukatu</string>
    <string name="erIzena">Izena bete mesedez</string>
    <string name="erAbizenak">Lehen bi abizenak sartu mesedez</string>
    <string name="erEposta">Eposta okerra</string>
    <string name="erPasahitza1">Pasahitza bete mesedez</string>
    <string name="erPasahitza2">Pasahitzak ez dira berdinak</string>
    <string name="erOkerra">Erregistro okerra: </string>
    <string name="erNanBikoiztua">Beste erabiltzaile bat dago NAN berarekin.</string>
    <string name="erPasahitzFormatua">Pasahitzak ez dago behar bezalako formatua (gutxienez 6 karaktere)</string>
    <string name="erEpostaErregistratuta">E-posta dagoeneko erregistratua dago</string>
    <string name="erInternet">Ez dago Internet konexiorik. Saiatu berriro geroago</string>
    <string name="erEzezaguna">Errore ezezaguna: </string>
    <string name="kontuaSortu">Zure kontua sortu da</string>

    <!-- Informazio Gunea -->
    <string name="jokoaHasi">Jokatzen hasi</string>
    <string name="izenburuaGunea"></string>
    <string name="informazioGunea"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Botttom Navigation-->
    <string name="guneak">Guneak</string>
    <string name="mapa">Mapa</string>
    <string name="profila">Profila</string>
    <string name="ranking">Rankinga</string>

    <!-- Guneak Fragmet -->
    <string name="santutegiaIzenburua">Yermoko Andre Mariaren Santutegia</string>
    <string name="burdinHestiaIzenburua">Burdin Hesia</string>
    <string name="ermitaIzenburua">Santa Aguedako ermita</string>
    <string name="katutxaJauregiaIzenburua">Katuxako jauregia</string>
    <string name="elizaIzenburua">Lamuzako San Pedro eliza</string>
    <string name="lamuzaJauregiaIzenburua">Lamuza jauregia</string>
    <string name="legeazakoSorginaIzenburua">Lezeagako sorgina</string>
    <string name="azkenEbaluazioaIzenburua">Azken ebaluazioa</string>

    <!-- Profila Fragment -->
    <string name="profilArgazkia">Aldatu profileko argazkia</string>
    <string name="etEposta">Eposta</string>
    <string name="etIzena">Izena</string>
    <string name="etAbizenak">Abizenak</string>
    <string name="etKurtsoa">Kurtsoa</string>
    <string name="btnAldatuPass">Aldatu Pasahitza</string>
    <string name="btnItxiSaioa">Itxi saioa</string>
    <string name="btnDelAcc">Ezabatu kontua</string>

    <!-- Mapa Fragment -->
    <string name="mapaInfo">Behean Laudioko mapa ikusi ahal dugu 8 gune desberdinen kokalekuekin. Klick egiten badugu gune batean, kokalekuaren izena eta inforamzio txiki bat ikusi ahalko dugu. Klick-a mantzentzen badugu gunean, gune horren barrura eramango digu, bertan informazio gehiago eta argazki desberdinak ikusi ahal izateko.</string>

    <string name="descriptionEditIzena">Izena editatzeko botoia</string>
    <string name="descriptionEditAbizenak">Abizenak editatzeko botoiak</string>

    <string name="aldaketakGorde">Aldaketak gorde nahi dituzu?</string>
    <string name="bai">Bai</string>
    <string name="ez">Ez</string>

    <string name="pasahitzBerria">Pasahitz berria sartu:</string>
    <string name="aldatu">Aldatu</string>
    <string name="ezeztatu">Ezeztatu</string>

    <string name="pasahitzaHutsik">Pasahitza ezin da hutsik egon</string>
    <string name="pasahitzaOndoAldatuta">Zure pasahitza eguneratu da</string>
    <string name="pasahitzaGaizkiAldatuta">Ezin izan da pasahitza aldatu</string>
    <string name="internetKonexioEz">Internet konexio gabe. Saiatu berriro beranduago.</string>
    <string name="pasahitzFormaEz">Gutxienez 6 karaktereko luzeera eduki behar du</string>

    <string name="kontuaEzabatuGaldera">Ziur zaude zure kontua ezabatu nahi duzula?</string>
    <string name="kontuaEzabatuta">Zure kontua ondo ezabatu da</string>
    <string name="kontuaEzEzabatuta">Ezin izan da zure kontua ezabatu, saiatu berriro geroago</string>

    <!-- laberintoa -->
    <string name="btnAurrera">GORA</string>
    <string name="btnAtzera">BEHERA</string>
    <string name="btnEzkerra">EZKERRA</string>
    <string name="btnEskuma">ESKUMA</string>

    <!-- kokalekua_dialog -->
    <string name="kokalekuaHasi">Zure kokalekuko gunea hasi nahi duzu?</string>
    <string name="kokalekuaEz">Ez</string>
    <string name="kokalekuaBai">Bai</string>

    <!-- informazioa_dialog -->
    <string name="prest">Prest zaude jokoa hasteko?</string>
    <string name="prestEz">Arauak ikusi</string>
    <string name="prestBai">Jokatu</string>


    <!-- zorionak_dialog -->
    <string name="aurrera">Aurrera</string>
    <string name="berriroJolastu">Berriro jolastu</string>
    <string name="tituloaZorionak">ZORIONAK!!</string>
    <string name="testuaZorionak">Oso ondo segui horrela!!</string>

    <!-- Kruzigrama -->
    <string name="btnKonpronatu"> Konprobatu </string>
    <string name="definizioa1"> 1. Norbaitek, beste norbaiten edo zerbaiten itxura hartzeko, edo inork ezagut ez dezan, jartzen dituen jantzien edo bestelakoen multzoa.</string>
    <string name="definizioa2"> 2. Urteko bigarren hila, urte arruntetan 28 egun eta bisurteetan 29 egun dituena.</string>
    <string name="definizioa3"> 3. Pertsona-talde bat jendearen aurretik ilaran igarotzea; bereziki, soldadu-talde bat agintarien aurretik ilaran igarotzea.</string>
    <string name="definizioa4"> 4. Su handia.</string>
    <string name="definizioa5"> 5. Herri sineskeriaren arabera, deabruarekiko hitzarmen baten ondorioz-edo, indar ezkutuen jabe den pertsona.</string>
    <string name="definizioa6"> 6. Laudioko sorginaren izena.</string>
    <string name="desfile">DESFILE</string>
    <string name="sutzar">SUTZAR</string>
    <string name="mozorro">MOZORRO</string>
    <string name="otsaila">OTSAILA</string>
    <string name="sorgin">SORGIN</string>
    <string name="lezeaga">LEZEAGA</string>
    <string name="kruzigranaEginEz">"Ez da kruzigrama guztiz amaitu"</string>

    <!-- Sopa letra -->
    <string name="txtTunnelak">TUNELAK</string>
    <string name="txtArtilleria">ARTILLERIA</string>
    <string name="txtAbiazioa">ABIAZIOA</string>
    <string name="txtTropa">TROPA</string>
    <string name="txtLubaki">LUBAKI</string>
    <string name="txtBunkerrak">BUNKERRAK</string>
    <string name="hitzOkerra">Hitz hori ez da zuzena.</string>

    <!-- Galderak -->
    <string name="erantzunaAukeratu">Erantzun bat aukeratu, mesedez</string>
    <string name="denboraGabe">Denbora agortua!</string>

    <!-- erantzun_zuzena_dialog -->
    <string name="hurrengoGaldera">Hurrengo galdera</string>

    <!-- erantzun_zuzena_dialog -->
    <string name="tituloaOkerra">ERANTZUN OKERRA</string>
    <string name="testuaOkerra">Hurrengoan hobeago egingo duzu</string>

    <!-- Ruleta dialog -->
    <string name="btnJolastu">Jolastu</string>

    <!-- Galderak (Ruleta) -->
    <string name="zuzenduBtn">Zuzendu</string>
    <string name="bukatuBtn">Bukatu</string>

    <string name="galderaZuzena1">1. Galdera: Zuzena</string>
    <string name="galderaOkerra1">1. Galdera: Okerra</string>
    <string name="galderaZuzena2">2. Galdera: Zuzena</string>
    <string name="galderaOkerra2">2. Galdera: Okerra</string>

    <string name="gunekoErantzunGuztiak">guneko eratzun guztiak egin dituzu</string>

    <!-- Hutsuneak bete -->
    <string name="erantzuna1">Plaza</string>
    <string name="erantzuna2">Irudi</string>
    <string name="erantzuna3">XVI</string>
    <string name="erantzuna4">Tenplu</string>
    <string name="erantzuna5">Lamuza</string>

    <string name="bat">1. </string>
    <string name="bi">2. </string>
    <string name="hiru">3. </string>
    <string name="lau">4. </string>
    <string name="bost">5. </string>

    <string name="testuaHutsunea">Lamuzako San Pedro eliza _____ (1). mendean eraiki zen, baina eliza izan baino lehenago, _____ (2)
    bat zegoen han. Gaur egungo elizaren barruan, _____ (3) politak topatu ditzakegu. San Pedro eliza,
    herriko _____ n (4) kokatuta dago, eta _____ ko (5) jendearentzako toki enblematikoa da.</string>

    <!-- Anagrama -->
    <string name="hitzaordenatu">Hitza ordenatu</string>
    <string name="erroreaAnigrama">Hitz baten bat ez dago ondo.</string>

    <!-- erakutsiMezua-->
    <string name="zurePuntuazioa">Hau izan da zure puntuazioa</string>
    <string name="hobezina">Hobezina!!!</string>
    <string name="osoOndo">Oso ondo!!</string>
    <string name="ondo">Ondo!</string>
    <string name="hobetoEgin"> Hurrengoan hobeto egingo duzu!</string>

    <!-- ruleta -->
    <string name="btnBiratu">Biratu</string>



</resources>