<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfilaFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivProfilArgazkia"
                    android:layout_width="125sp"
                    android:layout_height="125sp"
                    android:layout_weight="1"
                    android:src="@drawable/profile_24" />

                <TextView
                    android:id="@+id/tvProfilArgazkia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/profilArgazkia"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp">

            <EditText
                android:id="@+id/etEposta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/etEposta"
                android:enabled="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp">

            <EditText
                android:id="@+id/etIzena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/etIzena"
                android:inputType="text" />

            <ImageButton
                android:id="@+id/ibEditIzenaProfila"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/edit_pencil_24"
                android:contentDescription="@string/descriptionEditIzena"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp">

            <EditText
                android:id="@+id/etAbizenak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/etAbizenak"
                android:inputType="text" />

            <ImageButton
                android:id="@+id/ibEditAbizenaProfila"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/edit_pencil_24"
                android:contentDescription="@string/descriptionEditAbizenak"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp">

            <EditText
                android:id="@+id/etKurtsoaProfila"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/etKurtsoa"
                android:enabled="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp">


            <Button
                android:id="@+id/btnAldatuPasahitza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnAldatuPass"
                app:icon="@drawable/password_24"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp">

            <Button
                android:id="@+id/btnItxiSaioa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnItxiSaioa"
                android:backgroundTint="@color/soft_orange"
                app:icon="@drawable/logout_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp">


            <Button
                android:id="@+id/btnEzabatuKontua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnDelAcc"
                android:backgroundTint="@color/soft_red"
                app:icon="@drawable/delete_acc_24"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>